# tactyk

./: CMakeLists.txt  code_of_conduct.txt  devlog  readme.md
aux/: aux_printit.c  aux_printit.h  aux_sdl.c  aux_sdl.h  aux_util.c  aux_util.h
doc/: OBSOLETE_DOCUMENT_tactyk_overview.odt  __tactyk-core [v-isa].txt  __tactyk-emit-svc.txt  __tactyk-lib.txt  __tactyk-test.txt  tactyk-core [v-isa].txt  tactyk-core-Super-SIMD [v-isa].txt  tactyk-core-x87-math[v-isa].txt  tactyk-core-xmm-fpmath [v-isa].txt  tactyk-emit.txt  tactyk-host-interface.txt  tactyk-pl.txt  tactyk-standalone-runtime.txt  tactyk-structured-text.txt  tactyk-test.txt  tactyk-virtual-isa.txt  tactyk_overview.odt
examples/: emit.tkp  fib.tkp  hello.tkp  hello_sdl.tkp  julia.tkp  julia_bus.tkp  lazy_quine.tkp  matrix-simd.tkp  matrix.tkp  printit.tkp  recursive.tkp
extras/: gen_sse_mappings.py  gentest.py
extras/programs/: bdfutil.manifest  drawtest.manifest  drawtest.tkp  tabletest.manifest  tabletest.mega.tkp  tabletest.mini.tkp  tabletest.nano.tkp  tabletest.tkp
extras/programs/data/: unifont_basic_chars.tkf
extras/programs/data/alt_testpng/: license.txt
extras/programs/lib/: .table.template.tkp  _bdf-extract.tkp  ascii_constants.tkp  basic-ui.tkp  bdf-extract.tkp  bitmap16x28.tkp  bitstream.tkp  code.tkp  deflate.tkp  matrix-simd.tkp  ministring.reader.tkp  ministring.tkp  png.tkp  table.header.tkp  table.mega.tkp  table.mini.tkp  table.nano.tkp  table.tkp  tactyk_draw.tkp  ui.tkp
extras/programs/lib/.old/: table.tkp
extras/programs/lib/bitwise-transforms/: interleavebits-byte-bit.tkp  interleavebits-byte-byte.tkp  interleavebits-byte-halfnibble.tkp  interleavebits-byte-nibble.tkp  interleavebits-dword-bit.tkp  interleavebits-dword-byte.tkp  interleavebits-dword-halfnibble.tkp  interleavebits-dword-nibble.tkp  interleavebits-qword-bit.tkp  interleavebits-qword-byte.tkp  interleavebits-qword-halfnibble.tkp  interleavebits-qword-nibble.tkp  interleavebits-word-bit.tkp  interleavebits-word-byte.tkp  interleavebits-word-halfnibble.tkp  interleavebits-word-nibble.tkp  interleavebytes-dword-bit.tkp  interleavebytes-dword-byte.tkp  interleavebytes-dword-halfnibble.tkp  interleavebytes-dword-nibble.tkp  interleavebytes-qword-bit.tkp  interleavebytes-qword-byte.tkp  interleavebytes-qword-halfnibble.tkp  interleavebytes-qword-nibble.tkp  interleavebytes-word-bit.tkp  interleavebytes-word-byte.tkp  interleavebytes-word-halfnibble.tkp  interleavebytes-word-nibble.tkp  interleavehalfnibbles-byte-bit.tkp  interleavehalfnibbles-byte-byte.tkp  interleavehalfnibbles-byte-halfnibble.tkp  interleavehalfnibbles-byte-nibble.tkp  interleavehalfnibbles-dword-bit.tkp  interleavehalfnibbles-dword-byte.tkp  interleavehalfnibbles-dword-halfnibble.tkp  interleavehalfnibbles-dword-nibble.tkp  interleavehalfnibbles-qword-bit.tkp  interleavehalfnibbles-qword-byte.tkp  interleavehalfnibbles-qword-halfnibble.tkp  interleavehalfnibbles-qword-nibble.tkp  (+20 more)
extras/programs/lib/renderers/: bmpfnt16x16.tkp  irrvnoise.tkp  pixmap.tkp  ptpxblend.tkp  rect.tkp
include/: tactyk.h  tactyk_alloc.h  tactyk_asmvm.h  tactyk_assembler.h  tactyk_dblock.h  tactyk_debug.h  tactyk_emit.h  tactyk_emit_svc.h  tactyk_pl.h  tactyk_report.h  tactyk_util.h  tactyk_visa.h
libtactyk/: CMakeLists.txt  tactyk.c  tactyk.layout  tactyk_alloc.c  tactyk_asmvm.c  tactyk_assembler.c  tactyk_dblock.c  tactyk_debug.c  tactyk_emit.c  tactyk_emit_svc.c  tactyk_pl.c  tactyk_report.c  tactyk_util.c  tactyk_visa.c
rsc/: tactyk_asmvm_header.asm  tactyk_core.visa  tactyk_core__all.vl  tactyk_core_bits.visa  tactyk_core_bulk_transfer.visa  tactyk_core_ccall.visa  tactyk_core_math.visa  tactyk_core_memory.visa  tactyk_core_simd-util.visa  tactyk_core_simd.visa  tactyk_core_stash.visa  tactyk_core_stash_ext.visa  tactyk_core_tvmcall.visa  tactyk_core_typespec.visa  tactyk_core_xmm_fpmath.visa
runtime/: tactyk_basic_runtime.c  tactyk_run_platform_functions.c  tactyk_run_platform_functions.h  tactyk_run_resource_pack.c  tactyk_run_resource_pack.h
src/: aux_testlib.c  aux_testlib.h  fibtest.c  main.c  qstest.c  qstest.h  tactyk.h  tactyk_asmvm.h  tactyk_assembler.c  tactyk_dblock.c  tactyk_dblock.h  tactyk_emit.c  tactyk_emit.h  tactyk_pl.c  tactyk_pl.h  tactyk_visa.c
tactyktest/: tactyk_test__TestIt.c  tactyk_test__callbacks.c  tactyk_test__platform_functions.c  tactyk_test__util.c  tactyk_test__var_functions.c  ttest.c  ttest.h
tdemo/: CMakeLists.txt  aux_sdl.c  aux_sdl.h  aux_testlib.c  aux_testlib.h  esvctest.c  esvctest.h  fhtest.c  fhtest.h  fibtest.c  fibtest.h  ftest.c  ftest.h  main.c  qstest.c  qstest.h
tests/: add  add-xmmx  addr.offset  and  arctangent  assign-data-immediate  assign-data-properties  assign-data-stackreg  assign-immediate  assign-xmmx  bind  bind-augments  blockload-data  blockload-xmmx  blockload-xmmx-full  blockstore-data  blockstore-xmmx  blockstore-xmmx-full  break  ccall  compute  cosine  cross  div  div-xmmx  dot  extract  goto  if-ctdl  if-dtcl  if-dtdl  if-dtil  if-itdl  inc-data  insert  load-data  load-fail-b  load-fail-d  load-fail-f32  load-fail-f64  (+81 more)
